--- a/Resume.html
+++ b/Resume.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            Bittoo Aggarwal
+            Sudheer Kumar
         </h1>
         <p>Software Developer, Educator at Geekster</p>
         <a href="https://www.linkedin.com/">Linkedin</a>
